crates/swc_ecma_parser/tests/errors/missing_paren_if/input.js
if true {
    console.log("test");
}
